fixing overlaps and font-sizes

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -3,3 +3,7 @@ body {
   overflow-x: hidden;
   margin: 0;
 }
+
+* {
+    overflow-x: hidden;
+}
